sumo/tests/traci/VariableSubscription/errors/UnknownCommand/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:27:31 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SubscribeVariable>:
  domID=255 objID=0 with 1 variables
.. Sent command is not implemented (255), [description: Command not implemented in sumo]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
